--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   path_provider: any
   intl: ^0.15.7
   fluttertoast: ^3.0.0
+  curved_navigation_bar: ^0.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
