--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   fluttertoast: ^3.0.0
   curved_navigation_bar: ^0.3.2
   provider: ^2.0.1
+  google_sign_in: ^4.0.1+3
+  firebase_auth: ^0.8.4+5
+  http: ^0.12.0+2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
