--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_sign_in: ^4.0.1+3
   firebase_auth: ^0.8.4+5
   http: ^0.12.0+2
+  slide_popup_dialog: ^0.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
