--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_auth: ^0.8.4+5
   http: ^0.12.0+2
   slide_popup_dialog: ^0.0.2
+  flutter_local_notifications: 0.7.1+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
