--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,16 @@ dependencies:
   fluttertoast: ^3.0.0
   curved_navigation_bar: ^0.3.2
   provider: ^2.0.1
-  google_sign_in: ^4.0.1+3
-  firebase_auth: ^0.8.4+5
+  # google_sign_in: ^4.0.1+3
+  # firebase_auth: ^0.8.4+5
   http: ^0.12.0+2
   slide_popup_dialog: ^0.0.2
   flutter_local_notifications: 0.7.1+3
+  search_app_bar: ^1.0.2+2
+  flutter_datetime_picker: ^1.3.8
+  dropdown_banner: ^1.4.0
+  dart_notification_center: ^1.0.0+1
+  giffy_dialog: ^1.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
