--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   dart_notification_center: ^1.0.0+1
   giffy_dialog: ^1.7.0
   font_awesome_flutter: ^8.8.1
+  firebase_storage:
+  cloud_firestore:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
