--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ dependencies:
   font_awesome_flutter: ^8.8.1
   firebase_storage:
   cloud_firestore:
-  share_social_media_plugin: 1.0.7
   photo_view: 0.8.1
   flare_flutter: ^2.0.1
+  webview_flutter: ^0.3.3
+  flutter_speed_dial: ^1.2.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
