--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,9 +1,12 @@
 // This is a generated file; do not edit or check into version control.
 FLUTTER_ROOT=E:\flutter\flutter
-FLUTTER_APPLICATION_PATH=C:\Proyectos Flutter\todo_app
+FLUTTER_APPLICATION_PATH=C:\Proyectos Flutter\Proyecto FINAL\02-05-20 MAL\todo_app
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
 SYMROOT=${SOURCE_ROOT}/../build\ios
-FLUTTER_FRAMEWORK_DIR=E:\flutter\flutter\bin\cache\artifacts\engine\ios
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
+DART_OBFUSCATION=false
+TRACK_WIDGET_CREATION=false
+TREE_SHAKE_ICONS=false
+PACKAGE_CONFIG=.packages
