--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,16 +12,14 @@ dependencies:
   sqflite: any
   path_provider: any
   intl: ^0.15.7
-  fluttertoast: ^3.0.0
   curved_navigation_bar: ^0.3.2
   provider: ^2.0.1
   google_sign_in: any
   firebase_auth: any
-  http: ^0.12.0+2
+  http: ^0.12.2
   slide_popup_dialog: ^0.0.2
-  flutter_local_notifications: 0.7.1+3
+  flutter_local_notifications: ^1.4.4+1
   search_app_bar: ^1.0.2+2
-  flutter_datetime_picker: ^1.3.8
   dropdown_banner: ^1.4.0
   dart_notification_center: ^1.0.0+1
   giffy_dialog: ^1.7.0
@@ -32,6 +30,8 @@ dependencies:
   flare_flutter: ^2.0.1
   webview_flutter: ^0.3.3
   flutter_speed_dial: ^1.2.5
+  achievement_view: ^0.2.1
+  syncfusion_flutter_charts: ^18.4.30
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
