--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   achievement_view: ^0.2.1
   syncfusion_flutter_charts: ^18.4.30
+  shared_preferences: ^0.5.12+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
