--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   achievement_view: ^0.2.1
   syncfusion_flutter_charts: ^18.4.30
   shared_preferences: ^0.5.12+4
+  local_auth: ^0.6.3+4
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
